// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cabinet test 1`] = `
Array [
  <header>
    <div
      className="container"
    >
      <div
        className="flex-row"
      >
        <div
          className="header__CabinetInfo"
          onClick={[Function]}
        >
          <img
            alt="icon"
            className="mainIcon"
            draggable={false}
            onClick={null}
            src="/img/logo.svg"
            title={null}
          />
          <h3
            className="tilteApp"
          >
            Constructor
          </h3>
        </div>
        <div
          className="header__newProject__AddButton"
          onClick={[Function]}
        >
          <img
            alt="icon"
            className="Cabinet"
            draggable={false}
            onClick={null}
            src="/img/plus.png"
            title={null}
          />
        </div>
        <div
          className="Navigator"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-w-14  about fas fa-2x fa-book"
            data-icon="book"
            data-prefix="fas"
            focusable="false"
            onClick={[Function]}
            role="img"
            style={Object {}}
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M448 360V24c0-13.3-10.7-24-24-24H96C43 0 0 43 0 96v320c0 53 43 96 96 96h328c13.3 0 24-10.7 24-24v-16c0-7.5-3.5-14.3-8.9-18.7-4.2-15.4-4.2-59.3 0-74.7 5.4-4.3 8.9-11.1 8.9-18.6zM128 134c0-3.3 2.7-6 6-6h212c3.3 0 6 2.7 6 6v20c0 3.3-2.7 6-6 6H134c-3.3 0-6-2.7-6-6v-20zm0 64c0-3.3 2.7-6 6-6h212c3.3 0 6 2.7 6 6v20c0 3.3-2.7 6-6 6H134c-3.3 0-6-2.7-6-6v-20zm253.4 250H96c-17.7 0-32-14.3-32-32 0-17.6 14.4-32 32-32h285.4c-1.9 17.1-1.9 46.9 0 64z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
          <img
            alt="icon"
            className="about"
            draggable={false}
            onClick={[Function]}
            src="/img/about_logo.svg"
            title="about"
          />
          <img
            alt="icon"
            className="logoutButton"
            draggable={false}
            onClick={[Function]}
            src="/img/logOut.svg"
            title="logOut"
          />
        </div>
      </div>
    </div>
  </header>,
  <div
    className="Cabinet"
  >
    <section
      className="projectsList"
    >
      <div
        className="container"
      >
        <div
          className="flex-column"
        >
          <div
            className="projectsList__box"
          >
            <h3>
              Your Projects
            </h3>
          </div>
          <div
            className="projectsList__list"
          >
            <div
              className="item"
              data-id={0}
            >
              <p
                className="ProjectName"
              >
                Test1
              </p>
              <p
                className="ProjectType"
              >
                landing
              </p>
              <div
                className="projectController"
              >
                <input
                  className="projectControllerButton_enter"
                  onClick={[Function]}
                  type="button"
                  value="enter build"
                />
                <input
                  className="projectControllerButton_delete"
                  onClick={[Function]}
                  type="button"
                  value="delete"
                />
              </div>
              <input
                className="productionButton"
                onClick={[Function]}
                type="button"
                value="Production"
              />
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>,
]
`;

exports[`Cabinet test 2`] = `
Array [
  <header>
    <div
      className="container"
    >
      <div
        className="flex-row"
      >
        <div
          className="header__CabinetInfo"
          onClick={[Function]}
        >
          <img
            alt="icon"
            className="mainIcon"
            draggable={false}
            onClick={null}
            src="/img/logo.svg"
            title={null}
          />
          <h3
            className="tilteApp"
          >
            Constructor
          </h3>
        </div>
        <div
          className="Navigator"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-w-14  about fas fa-2x fa-book"
            data-icon="book"
            data-prefix="fas"
            focusable="false"
            onClick={[Function]}
            role="img"
            style={Object {}}
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M448 360V24c0-13.3-10.7-24-24-24H96C43 0 0 43 0 96v320c0 53 43 96 96 96h328c13.3 0 24-10.7 24-24v-16c0-7.5-3.5-14.3-8.9-18.7-4.2-15.4-4.2-59.3 0-74.7 5.4-4.3 8.9-11.1 8.9-18.6zM128 134c0-3.3 2.7-6 6-6h212c3.3 0 6 2.7 6 6v20c0 3.3-2.7 6-6 6H134c-3.3 0-6-2.7-6-6v-20zm0 64c0-3.3 2.7-6 6-6h212c3.3 0 6 2.7 6 6v20c0 3.3-2.7 6-6 6H134c-3.3 0-6-2.7-6-6v-20zm253.4 250H96c-17.7 0-32-14.3-32-32 0-17.6 14.4-32 32-32h285.4c-1.9 17.1-1.9 46.9 0 64z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
          <img
            alt="icon"
            className="about"
            draggable={false}
            onClick={[Function]}
            src="/img/about_logo.svg"
            title="about"
          />
          <img
            alt="icon"
            className="logoutButton"
            draggable={false}
            onClick={[Function]}
            src="/img/logOut.svg"
            title="logOut"
          />
        </div>
      </div>
    </div>
  </header>,
  <div
    className="Cabinet"
  >
    <section
      className="projectsList"
    >
      <div
        className="container"
      >
        <div
          className="flex-column"
        >
          <div
            className="projectsList__box"
          >
            <h3>
              Your Projects
            </h3>
          </div>
          <div
            className="projectsList__list"
          />
        </div>
      </div>
    </section>
  </div>,
]
`;

exports[`Cabinet test 3`] = `
Array [
  <header>
    <div
      className="container"
    >
      <div
        className="flex-row"
      >
        <div
          className="header__CabinetInfo"
          onClick={[Function]}
        >
          <img
            alt="icon"
            className="mainIcon"
            draggable={false}
            onClick={null}
            src="/img/logo.svg"
            title={null}
          />
          <h3
            className="tilteApp"
          >
            Constructor
          </h3>
        </div>
        <div
          className="Navigator"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-w-14  about fas fa-2x fa-book"
            data-icon="book"
            data-prefix="fas"
            focusable="false"
            onClick={[Function]}
            role="img"
            style={Object {}}
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M448 360V24c0-13.3-10.7-24-24-24H96C43 0 0 43 0 96v320c0 53 43 96 96 96h328c13.3 0 24-10.7 24-24v-16c0-7.5-3.5-14.3-8.9-18.7-4.2-15.4-4.2-59.3 0-74.7 5.4-4.3 8.9-11.1 8.9-18.6zM128 134c0-3.3 2.7-6 6-6h212c3.3 0 6 2.7 6 6v20c0 3.3-2.7 6-6 6H134c-3.3 0-6-2.7-6-6v-20zm0 64c0-3.3 2.7-6 6-6h212c3.3 0 6 2.7 6 6v20c0 3.3-2.7 6-6 6H134c-3.3 0-6-2.7-6-6v-20zm253.4 250H96c-17.7 0-32-14.3-32-32 0-17.6 14.4-32 32-32h285.4c-1.9 17.1-1.9 46.9 0 64z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
          <img
            alt="icon"
            className="about"
            draggable={false}
            onClick={[Function]}
            src="/img/about_logo.svg"
            title="about"
          />
          <img
            alt="icon"
            className="logoutButton"
            draggable={false}
            onClick={[Function]}
            src="/img/logOut.svg"
            title="logOut"
          />
        </div>
      </div>
    </div>
  </header>,
  <div
    className="Cabinet"
  >
    <section
      className="projectsList"
    >
      <div
        className="container"
      >
        <div
          className="flex-column"
        >
          <div
            className="projectsList__box"
          >
            <h3>
              Your Projects
            </h3>
          </div>
          <div
            className="projectsList__list"
          />
        </div>
      </div>
    </section>
  </div>,
]
`;

exports[`Cabinet test 4`] = `
<div
  className="Cabinet"
>
  <section
    className="projectsList"
  >
    <div
      className="container"
    >
      <div
        className="flex-column"
      >
        <div
          className="projectsList__box"
        >
          <h3>
            Your Projects
          </h3>
        </div>
        <div
          className="projectsList__list"
        />
      </div>
    </div>
  </section>
</div>
`;
